# UFCPolyML

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  DECISIONS.md  DECISIONS_architecture_redesign.md  FEATURES.md  Makefile  README.md  dvc.yaml  pyproject.toml  scrapy.cfg
.claude/spec/: Key Design Decisions.md  STEERING.md  design.md  requirements.md  tasks.md
.dvc/: .gitignore
configs/: mlflow.yaml
configs/capture/: default.yaml
configs/data/: default.yaml
configs/scrape/: default.yaml
deploy/: Dockerfile  fly.toml
docs/: DECISIONS.md  DECISIONS_architecture_redesign.md  FEATURES.md
src/ufc_edge/: __init__.py
src/ufc_edge/data/: __init__.py  schemas.py  storage.py
src/ufc_edge/data/polymarket/: capture.py  schemas.py  storage.py
src/ufc_edge/data/ufcstats/: __init__.py  challenge.py  items.py  middlewares.py  parsers.py  pipelines.py  schemas.py  settings.py  spider.py  storage.py
src/ufc_edge/data/validation/: __init__.py  invariants.py  quarantine.py  runner.py  schemas.py
src/ufc_edge/features/: __init__.py
src/ufc_edge/market/: __init__.py  capture.py
src/ufc_edge/model/: __init__.py
src/ufc_edge/strategy/: __init__.py
tests/: conftest.py
tests/data/: test_parsers.py  test_schemas.py  test_validation.py
tests/fixtures/: event_detail.html  events_list.html  fight_detail.html  fighter_detail.html
