[project]
name = "ufc-edge"
version = "0.1.0"
description = "Quant-grade UFC fight prediction and Polymarket trading system"
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.11",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "duckdb>=1.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "mlflow>=2.13",
    "dvc>=3.50",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ufc_edge"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "ANN", "S", "B", "C4", "SIM"]
ignore = [
    "ANN101",  # self annotation not required
    "ANN102",  # cls annotation not required
    "S101",    # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
